# impact-path

./: MEMORY.md  README.md  pyproject.toml
routes/: clarity.yaml  paths.yaml  skill_doubts.yaml  start.yaml
src/adventure/: claude.py  claude_cli.py  config.py  context.py  engine.py  graph.py  main.py
